# PhShell

./: CMakeLists.txt  controflow.c  cp  cp.c  execute.c  ls  ls.c  pch.h  process.c  readme.md  sh.c  smsh.h  smsh1.c  splitline.c
practice/: controflow.c  execute.c  more01  more01.c  pipe.c  process.c  smsh.h  smsh1.c  splitline.c
src/: Phsh.cpp  Phsh.h  Processer.cpp  Processer.h  Varlib.cpp  Varlib.h  pch.h  test.cpp
